--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div class="maindiv">
         <h1>Simple Interest Calculator</h1>
 
       Amount <input type="number"  id="principal" onchange="validateAmount()">  <br/>
@@ -23,6 +24,7 @@
           </select><br/>
 
         <button onclick="compute()">Compute Interest</button><br/>
-        <span id="result"></span><br>
+        <span id="result"></span><br/>
+        </div>
     </body>
 </html>
