--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
         <button onclick="compute()">Compute Interest</button><br/>
         <span id="result"></span><br/>
+              <footer>&#169; Everyone Can Get Rich</footer>
         </div>
     </body>
 </html>
